feat: add interactivity for hover in navbar

--- a/index.html
+++ b/index.html
@@ -48,42 +48,85 @@
           >
             <img src="./assets/icons/gallery.svg" alt="Icon" class="size-6" />
           </div>
-          <div class="flex flex-col">
-            <div class="flex gap-4 px-16 py-4 font-medium cursor-pointer">
+          <div class="relative flex flex-col">
+            <div
+              class="flex items-center gap-4 px-16 py-4 font-medium cursor-pointer group"
+            >
+              <div class="absolute left-0 h-10 border-r-4 border-primary"></div>
               <img
                 src="./assets/icons/dashboard.svg"
                 alt="Dashboard"
                 class="size-6"
               />
-              <h2>Dashboard</h2>
+              <h2
+                class="transition-all duration-500 group-hover:translate-x-1 group-hover:font-normal"
+              >
+                Dashboard
+              </h2>
             </div>
-            <div class="flex gap-4 px-16 py-4 cursor-pointer">
+            <div
+              class="flex items-center gap-4 px-16 py-4 cursor-pointer group"
+            >
+              <div
+                class="absolute left-0 h-10 transition-all duration-500 group-hover:border-r-4 border-primary"
+              ></div>
               <img
                 src="./assets/icons/calender.svg"
                 alt="Schedule"
                 class="size-6"
               />
-              <h2>Schedule</h2>
+              <h2
+                class="transition-all duration-500 group-hover:translate-x-1 group-hover:font-normal"
+              >
+                Schedule
+              </h2>
             </div>
-            <div class="flex gap-4 px-16 py-4 cursor-pointer">
+            <div
+              class="flex items-center gap-4 px-16 py-4 cursor-pointer group"
+            >
+              <div
+                class="absolute left-0 h-10 transition-all duration-500 group-hover:border-r-4 border-primary"
+              ></div>
               <img
                 src="./assets/icons/message.svg"
                 alt="Schedule"
                 class="size-6"
               />
-              <h2>Message</h2>
+              <h2
+                class="transition-all duration-500 group-hover:translate-x-1 group-hover:font-normal"
+              >
+                Message
+              </h2>
             </div>
-            <div class="flex gap-4 px-16 py-4 cursor-pointer">
+            <div
+              class="flex items-center gap-4 px-16 py-4 cursor-pointer group"
+            >
+              <div
+                class="absolute left-0 h-10 transition-all duration-500 group-hover:border-r-4 border-primary"
+              ></div>
               <img
                 src="./assets/icons/analytics.svg"
                 alt="Analytics"
                 class="size-6"
               />
-              <h2>Analytics</h2>
+              <h2
+                class="transition-all duration-500 group-hover:translate-x-1 group-hover:font-normal"
+              >
+                Analytics
+              </h2>
             </div>
-            <div class="flex gap-4 px-16 py-4 cursor-pointer">
+            <div
+              class="flex items-center gap-4 px-16 py-4 cursor-pointer group"
+            >
+              <div
+                class="absolute left-0 h-10 transition-all duration-500 group-hover:border-r-4 border-primary"
+              ></div>
               <img src="./assets/icons/people.svg" alt="Team" class="size-6" />
-              <h2>Team</h2>
+              <h2
+                class="transition-all duration-500 group-hover:translate-x-1 group-hover:font-normal"
+              >
+                Team
+              </h2>
             </div>
           </div>
 
@@ -93,32 +136,64 @@
           ></div>
 
           <div>
-            <div class="flex gap-4 px-16 py-4 cursor-pointer">
+            <div
+              class="flex items-center gap-4 px-16 py-4 cursor-pointer group"
+            >
+              <div
+                class="absolute left-0 h-10 transition-all duration-500 group-hover:border-r-4 border-primary"
+              ></div>
               <img
                 src="./assets/icons/person.svg"
                 alt="Profile"
                 class="size-6"
               />
-              <h2>Profile</h2>
+              <h2
+                class="transition-all duration-500 group-hover:translate-x-1 group-hover:font-normal"
+              >
+                Profile
+              </h2>
             </div>
-            <div class="flex gap-4 px-16 py-4 cursor-pointer">
+            <div
+              class="flex items-center gap-4 px-16 py-4 cursor-pointer group"
+            >
+              <div
+                class="absolute left-0 h-10 transition-all duration-500 group-hover:border-r-4 border-primary"
+              ></div>
               <img
                 src="./assets/icons/gear.svg"
                 alt="Settings"
                 class="size-6"
               />
-              <h2>Settings</h2>
+              <h2
+                class="transition-all duration-500 group-hover:translate-x-1 group-hover:font-normal"
+              >
+                Settings
+              </h2>
             </div>
           </div>
         </div>
         <div class="">
-          <div class="flex gap-4 px-16 py-4 cursor-pointer">
+          <div class="flex items-center gap-4 px-16 py-4 cursor-pointer group">
+            <div
+              class="absolute left-0 h-10 transition-all duration-500 group-hover:border-r-4 border-primary"
+            ></div>
             <img src="./assets/icons/warning.svg" alt="Help" class="size-6" />
-            <h2>Help</h2>
+            <h2
+              class="transition-all duration-500 group-hover:translate-x-1 group-hover:font-normal"
+            >
+              Help
+            </h2>
           </div>
-          <div class="flex gap-4 px-16 py-4 cursor-pointer">
+          <div class="flex items-center gap-4 px-16 py-4 cursor-pointer group">
+            <div
+              class="absolute left-0 h-10 transition-all duration-500 group-hover:border-r-4 border-primary"
+            ></div>
             <img src="./assets/icons/logout.svg" alt="Logout" class="size-6" />
-            <h2>Logout</h2>
+            <h2
+              class="transition-all duration-500 group-hover:translate-x-1 group-hover:font-normal"
+            >
+              Logout
+            </h2>
           </div>
         </div>
       </aside>
