--- a/index.html
+++ b/index.html
@@ -1048,6 +1048,6 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.8/dist/chart.umd.min.js"></script>
     <!-- Custom my JS -->
-    <script src="chart.js"></script>
+    <script src="scripts/chart.js"></script>
   </body>
 </html>
