refactor: add shadow and animation

--- a/index.html
+++ b/index.html
@@ -223,11 +223,11 @@
           </label>
 
           <!-- OverView Section -->
-          <section class="p-4 bg-white rounded-xl">
+          <section class="p-4 bg-white shadow-xl rounded-xl">
             <h3 class="mb-4 text-lg font-semibold">Overview</h3>
             <div class="grid grid-cols-1 gap-4 text-white lg:grid-cols-2">
               <!-- Wallet Card Start-->
-              <div class="flex flex-col w-full gap-2 p-6 bg-primary rounded-xl">
+              <div class="flex flex-col w-full gap-2 p-6 shadow-sm hover:shadow-md bg-primary rounded-xl">
                 <div class="flex flex-row items-center gap-4">
                   <div class="p-2 rounded-full border-light-primary border-1">
                     <svg
@@ -280,7 +280,7 @@
                   <span class="text-3xl font-semibold">$ 28,891.138</span>
                   <img
                     src="./assets/icons/arrowRight.svg"
-                    class="cursor-pointer size-6"
+                    class="transition-transform duration-700 cursor-pointer size-6 hover:translate-x-2"
                     alt="Right Arrow"
                   />
                 </div>
@@ -350,7 +350,7 @@
                     viewBox="0 0 25 24"
                     fill="none"
                     xmlns="http://www.w3.org/2000/svg"
-                    class="cursor-pointer"
+                    class="transition-transform duration-700 cursor-pointer size-6 hover:translate-x-2"
                   >
                     <path
                       d="M14.9302 5.93005L21.0002 12.0001L14.9302 18.0701"
@@ -444,7 +444,7 @@
                     viewBox="0 0 25 24"
                     fill="none"
                     xmlns="http://www.w3.org/2000/svg"
-                    class="cursor-pointer"
+                    class="transition-transform duration-700 cursor-pointer size-6 hover:translate-x-2"
                   >
                     <path
                       d="M14.9302 5.93005L21.0002 12.0001L14.9302 18.0701"
@@ -539,7 +539,7 @@
                     viewBox="0 0 25 24"
                     fill="none"
                     xmlns="http://www.w3.org/2000/svg"
-                    class="cursor-pointer"
+                    class="transition-transform duration-700 cursor-pointer size-6 hover:translate-x-2"
                   >
                     <path
                       d="M14.9302 5.93005L21.0002 12.0001L14.9302 18.0701"
