refactor: div to main

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </style>
   </head>
   <body>
-    <div
+    <main
       class="flex w-screen h-screen max-h-screen overflow-hidden bg-background font-jakarta"
     >
       <!-- side section -->
@@ -1040,7 +1040,7 @@
         </div>
         <!-- Right most part end -->
       </div>
-    </div>
+    </main>
     <!-- Load Tailwind CSS -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
 
