--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
                   <div class="relative">
                     <select
                       name="frequency"
-                      id="frequency"
+                      id="chart-type-select"
                       class="w-full py-2 pl-3 pr-8 text-sm transition duration-300 bg-transparent border rounded shadow-sm appearance-none cursor-pointer placeholder:text-slate-400 text-slate-700 border-slate-200 ease focus:outline-none focus:border-slate-400 hover:border-slate-400 focus:shadow-md"
                     >
                       <option value="daily">Daily</option>
@@ -1048,6 +1048,7 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.8/dist/chart.umd.min.js"></script>
     <!-- Custom my JS -->
+    <script src="data/chartData.js"></script>
     <script src="scripts/chart.js"></script>
   </body>
 </html>
