fix: hidden sidebar

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     >
       <!-- side section -->
       <aside
-        class="flex flex-col justify-between gap-8 py-8 text-sm font-light transition-all duration-700 bg-white w-52 md:w-72 shrink-0 text-dark-blue"
+        class="flex-col justify-between hidden gap-8 py-8 text-sm font-light transition-all duration-700 bg-white lg:flex w-52 md:w-72 shrink-0 text-dark-blue"
         id="side-nav"
       >
         <div class="flex flex-col">
