--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <!-- Side section end -->
 
       <!-- working in -->
-      <div class="flex flex-1 px-4 my-4 overflow-scroll md:px-8 md:my-8">
+      <div class="flex flex-1 px-4 pt-8 overflow-scroll md:px-8">
         <!-- Middle part -->
         <div class="grid w-full grid-cols-12 gap-8">
           <div class="flex flex-col flex-1 col-span-12 gap-8 lg:col-span-8">
